# alou-rust

./: .cargoignore  .env.example  .gitignore  AUTHENTICATION_GUIDE.md  BACKEND_SETUP.md  COMMIT_SUMMARY.md  Cargo.toml  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TODO.md  WALLET_AUTH_GUIDE.md  WALLET_MANAGER_IMPLEMENTATION.md  WORKFLOW_TOOL_SUMMARY.md  agent_config.json  agent_test_file.txt  build.bat  build.sh  check_logs.ps1  config.example.json  deploy_frontend.sh  mcp.json  nginx-frontend.conf  package-lock.json  package.json  quick_test_workflow.md  test_backend_error.ps1  test_blockchain.ps1  test_blockchain2.ps1  test_detailed_error.ps1  test_final_utf8.ps1  test_mcp_file.txt  test_prompts.ps1  test_wallet_integration.js  test_wallet_manager.md  test_workflow_tool.js
.github/workflows/: deploy-workers.yml
.kiro/specs/edge-migration/: OVERVIEW.md  design.md  requirements.md  tasks.md
321/: dht_report.md
alou-edge/: .gitignore  Cargo.toml  README.md  build.js  deploy-wsl.sh  index-simple.js  index.js  index.ts  openapi.yaml  package-lock.json  package.json  setup-wsl-simple.sh  setup-wsl.sh  wrangler.toml
alou-edge-ts/: package.json  wrangler.toml
alou-edge/examples/: blockchain_agent_usage.md  test_blockchain_agent.rs
alou-edge/migrations/: 0001_init.sql  README.md
alou-edge/src/: lib.rs  router.rs
alou-edge/src/agent/: ai_client.rs  blockchain_agent.rs  claude_client.rs  context.rs  core.rs  mod.rs  prompts.rs  session.rs
alou-edge/src/agent/providers/: claude.rs  deepseek.rs  mod.rs  openai.rs  qwen.rs
alou-edge/src/agent/tools/: broadcast.rs  mod.rs  payment.rs  query.rs  transaction.rs
alou-edge/src/mcp/: bridge.rs  client.rs  executor.rs  mod.rs  pool.rs  registry.rs
alou-edge/src/mcp/tools/: agent_wallet.rs  broadcast.rs  contract.rs  echo.rs  mod.rs  proxy.rs  query.rs  transaction.rs  wallet_auth.rs  wallet_manager.rs  workflow.rs
alou-edge/src/storage/: d1.rs  kv.rs  mod.rs
alou-edge/src/utils/: async_lock.rs  batch.rs  crypto.rs  error.rs  metrics.rs  mod.rs  time.rs
alou-edge/src/web3/: auth.rs  mod.rs  rpc.rs  signer.rs
alou-edge/src/web3/chains/: ethereum.rs  solana.rs
deploy/: CLOUD_DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE.md  alou-pay.service  cloud_deploy.sh  deploy.sh  manage.sh  nginx.conf  quick_deploy.sh  quick_server_deploy.sh  setup_server.sh  test_deployment.ps1  test_deployment_simple.ps1  update.sh
docs/: UI_FIXES.md  WALLET_REFACTOR.md  wallet-manager-usage.md
frontend/: .env.development  .env.production  deploy-frontend.ps1  env.d.ts  eslint.config.ts  index.html  package-lock.json  package.json  simple-index.html  vite.config.ts
frontend/public/: favicon-generator.html  generate-favicon.html
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: AgentChat.vue  ChatHeader.vue  ChatInput.vue  GoogleLoginButton.vue  MessageList.vue  SettingsPanel.vue  UserAvatar.vue  WalletManager.vue  WelcomeScreen.vue
frontend/src/components/wallet/: AgentWallets.vue  ContractWallet.vue  NetworkSelector.vue  SignatureModal.vue  TransactionList.vue  WalletConnect.vue  WalletOverview.vue
frontend/src/composables/: useI18n.ts
frontend/src/i18n/: messages.ts
frontend/src/router/: index.ts
frontend/src/services/: agent.service.ts  api.ts  auth.service.ts  blockchain.service.ts  user.service.ts  wallet.service.ts
frontend/src/stores/: auth.ts
frontend/src/types/: auth.ts
frontend/src/views/: AuthCallbackView.vue  HomeView.vue  LoginView.vue  WalletView.vue
migrations/: 001_init_en.sql  setup_local_db.ps1
new_folder/: example.txt
scripts/: test-wallet-manager.ps1  test-wallet-manager.sh
src/: agent.rs  agent_cli.rs  cli.rs  config.rs  connection_pool.rs  deepseek_client.rs  env_config.rs  error.rs  lib.rs  main.rs  mcp_client.rs  mcp_config.rs  mcp_tool.rs  prompt_registry.rs  prompts.rs  task_flow.rs  tool_registry.rs  tools.rs  types.rs  workers_main.rs  workers_simple.rs  workspace_context.rs
src/agent/: adapter.rs  core.rs  deepseek.rs  mod.rs  types.rs
src/api/: auth.rs  invitation_codes.rs  mod.rs  user.rs
src/auth/: google_oauth.rs  jwt.rs  middleware.rs  mod.rs  wallet.rs
src/client/: mod.rs
src/db/: mod.rs
src/models/: invitation_codes.rs  mod.rs  session.rs  user.rs
src/server/: mod.rs
src/transport/: mod.rs  stdio.rs
