[package]
name = "alou"
version = "0.1.3"
edition = "2021"
description = "Rust client SDK for the Model Context Protocol (MCP)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/darinkishore/mcp_client_rust"
documentation = "https://github.com/darinkishore/mcp_client_rust"
keywords = ["mcp", "client", "protocol", "mcp", "ai"]
categories = ["api-bindings", "development-tools"]

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "^1.0.137"
tokio = { version = "1.42.0", features = ["full"] }
async-trait = "0.1.85"
thiserror = "2.0.9"
futures = "0.3"
tracing = "0.1"
async-stream = "0.3.6"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
dotenv = "0.15"


[[bin]]
name = "agent-cli"
path = "src/agent_cli.rs"
