[package]
name = "alou"
version = "0.1.4"
edition = "2021"
description = "智能自动化工作流系统 - 基于Rust和Model Context Protocol (MCP)的智能体"
license = "MIT OR Apache-2.0"
repository = "https://github.com/logos-42/alou-rust"
documentation = "https://alou.fun"
keywords = ["mcp", "client", "protocol", "ai", "agent"]
categories = ["api-bindings", "development-tools", "command-line-utilities"]
authors = ["liuyuanjie <2844169590@qq.com>"]

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "^1.0.137"
tokio = { version = "1.42.0", features = ["full"] }
async-trait = "0.1.85"
thiserror = "2.0.9"
futures = "0.3"
tracing = "0.1"
async-stream = "0.3.6"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
dotenv = "0.15"
warp = "0.3"
chrono = { version = "0.4", features = ["serde"] }

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# 认证
oauth2 = "4.4"
jsonwebtoken = "9.2"
bcrypt = "0.15"
rand = "0.8.5"


[[bin]]
name = "agent-cli"
path = "src/agent_cli.rs"

[[bin]]
name = "list_tools"
path = "src/bin/list_tools.rs"

[[bin]]
name = "agent_http_server"
path = "src/bin/agent_http_server.rs"
