[package]
name = "alou-edge"
version = "0.1.0"
edition = "2021"
description = "Alou Edge - Web3 AI Agent on Cloudflare Workers"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "2.0"
futures = "0.3"
anyhow = "1.0"

# Cloudflare Workers
worker = { version = "0.6", default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window"] }
console_error_panic_hook = "0.1"

# UUID and time
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

# Async primitives (sync only, no net for WASM compatibility)
tokio = { version = "1.0", default-features = false, features = ["sync"] }

# HTTP client for Claude API (only for non-WASM testing)
reqwest = { version = "0.11", default-features = false, features = ["json"], optional = true }

# Note: We implement Claude API client directly using worker's fetch
# because official SDKs don't support WASM/Cloudflare Workers environment

# JWT (using jwt-simple which is WASM-compatible)
jwt-simple = "0.12"

# Crypto for signature verification
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "std"] }
ed25519-dalek = { version = "2.0", default-features = false, features = ["rand_core", "std"] }
getrandom = { version = "0.2", features = ["js"] }
bs58 = "0.5"

[dev-dependencies]
# Dev dependencies are not used in WASM build

[features]
default = []
testing = ["reqwest"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Optimize dependencies for size
[profile.release.package."*"]
opt-level = "z"
strip = true
